# mindsolver-fastapi

./: main.py  pyproject.toml  test.py  test_mm.py
